# wagtail-django-recaptcha

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  runtests.py  setup.py  tox.ini
.github/workflows/: publish.yml  test.yml
docs/: README.md
tests/: test_forms.py  test_models.py
tests/testapp/: manage.py
tests/testapp/home/: forms.py  models.py
tests/testapp/home/fixtures/: test_data.json
tests/testapp/home/migrations/: 0001_initial.py  0002_custom_form_builder_pages.py  0003_testcaptchaemailformfield_clean_name_and_more.py
tests/testapp/testapp/: settings.py  urls.py  wsgi.py
wagtailcaptcha/: forms.py  models.py
