[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wagtail-django-recaptcha"
version = "2.1.1"
description = "A simple recaptcha field for Wagtail Form Pages."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Wagtail Nest team", email = "hello@wagtail.org" }
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 5",
    "Framework :: Wagtail :: 6",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content"
]
dependencies = [
    "wagtail>=5.0",
    "django-recaptcha>=4"
]

[project.optional-dependencies]
testing = [
    "tox>=4.18.1,<4.19",
    "coverage>=6.5.0,<6.6",
    "flake8>=7.0.0,<7.1",
    "isort>=5.10.1",
    "wagtail>=4.1"
]
docs = []

[tool.ruff]
target-version = "py39"  # minimum target version

[tool.ruff.lint]
extend-select = [
    "B",    # flake8-bugbear
    "BLE",  # flake8-blind-except
    "C4",   # flake8-comprehensions
    "DJ",   # flake8-django
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "INT",  # flake8-gettext
    "PIE",  # flake8-pie
    "PGH",  # pygrep-hooks
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
    "T20",  # flake8-print
    "W",    # pycodestyle warnings
    "YTT",  # flake8-2020
    "UP",   # pyupgrade
    "RUF100",  # unused noqa
]

extend-ignore = [
    "E501",  # no line length errors
]
fixable = ["C4", "E", "F", "I", "UP"]

[tool.ruff.lint.isort.sections]
"django" = ["django"]
"wagtail" = ["wagtail", "modelcluster"]

[tool.ruff.lint.isort]
known-first-party = ["wagtailcaptcha"]
section-order = ["future", "standard-library", "django", "wagtail", "third-party", "first-party", "local-folder"]
force-sort-within-sections = true
lines-after-imports = 2
