[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=77", "wheel" ]

[project]
name = "wagtail-django-recaptcha"
version = "2.2.0"
description = "A simple recaptcha field for Wagtail Form Pages."
readme = "README.md"
license = "MIT"
authors = [
  { name = "Wagtail Nest team", email = "hello@wagtail.org" },
]
classifiers = [
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6.0",
  "Framework :: Wagtail",
  "Framework :: Wagtail :: 7",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
  "django-recaptcha>=4",
  "wagtail>=7",
]
optional-dependencies.docs = []
optional-dependencies.testing = [
  "coverage>=6.5",
  "pre-commit>=4",
  "tox>=4.18.1",
]
urls.Changelog = "https://github.com/wagtail-nest/wagtail-django-recaptcha/blob/main/CHANGELOG.md"
urls.Source = "https://github.com/wagtail-nest/wagtail-django-recaptcha"

[tool.setuptools]
packages = [ "wagtailcaptcha" ]

[tool.ruff]
target-version = "py310"  # minimum target version
lint.extend-select = [
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "DJ",     # flake8-django
  "E",      # pycodestyle errors
  "F",      # pyflakes
  "G",      # flake8-logging-format
  "I",      # isort
  "INT",    # flake8-gettext
  "PGH",    # pygrep-hooks
  "PIE",    # flake8-pie
  "RUF100", # unused noqa
  "S",      # flake8-bandit
  "SIM",    # flake8-simplify
  "T20",    # flake8-print
  "UP",     # pyupgrade
  "W",      # pycodestyle warnings
  "YTT",    # flake8-2020
]
lint.extend-ignore = [
  "E501", # no line length errors
]
lint.fixable = [ "C4", "E", "F", "I", "UP" ]
lint.isort.force-sort-within-sections = true
lint.isort.known-first-party = [ "wagtailcaptcha" ]
lint.isort.lines-after-imports = 2
lint.isort.section-order = [
  "future",
  "standard-library",
  "django",
  "wagtail",
  "third-party",
  "first-party",
  "local-folder",
]
lint.isort.sections.django = [ "django" ]
lint.isort.sections.wagtail = [ "wagtail", "modelcluster" ]
